[gd_scene load_steps=7 format=3 uid="uid://bsxy63xnxuc8i"]

[ext_resource type="Texture2D" uid="uid://bqgwckav6phkl" path="res://Sprites/Enemies/Enemy_2.png" id="1_wfjjy"]
[ext_resource type="Script" path="res://Inimigos/Enemy_2.gd" id="1_ys2pf"]
[ext_resource type="Texture2D" uid="uid://djhdk42bnuiwn" path="res://Sprites/Weapons/Gun.png" id="3_hhuks"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b0o8b"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_c7y2g"]
radius = 300.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_11hhs"]
size = Vector2(16, 6)

[node name="Enemy2" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_ys2pf")

[node name="Enemy" type="Sprite2D" parent="."]
texture = ExtResource("1_wfjjy")

[node name="Gun" type="Sprite2D" parent="Enemy"]
position = Vector2(-10, 2)
texture = ExtResource("3_hhuks")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_b0o8b")

[node name="Vision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CircleShape2D_c7y2g")

[node name="Gun_Pos" type="Marker2D" parent="."]
position = Vector2(-13, 0)

[node name="Shoot_CD" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Death" type="Area2D" parent="."]
position = Vector2(0, -11)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
shape = SubResource("RectangleShape2D_11hhs")

[connection signal="body_entered" from="Vision" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Shoot_CD" to="." method="_on_shoot_cd_timeout"]
[connection signal="body_entered" from="Death" to="." method="_on_death_body_entered"]
